added more front integration

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12068,6 +12068,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .block {
   display: block;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
